<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  	android:orientation="vertical"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

	<ScrollView 
	    android:id="@+id/ScrlView" 
	    android:layout_width="fill_parent" 
	    android:layout_height="fill_parent" >
 	
 		<LinearLayout 
 		    android:id="@+id/layoutForScroll" 
 		    android:orientation="vertical"
    		android:layout_width="fill_parent" 
    		android:layout_height="wrap_content" >
   			
 		    <RelativeLayout 
 		        android:id="@+id/layoutForHeader"
 		        android:orientation="horizontal"
 		        android:layout_width="fill_parent"
 		        android:layout_height="wrap_content" >
 		        
	 		    <TextView
			        android:id="@+id/tvNew"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/editItem"
			        android:textSize="20sp"
			        android:textStyle="bold" />

	 		    <Button
	 		        android:id="@+id/bSave"
	 		        android:layout_width="wrap_content"
	 		        android:layout_height="wrap_content"
	 		        android:text="@string/save"
	 		        android:layout_alignParentRight="true" />

			</RelativeLayout>
 		    
		    <EditText
		        android:id="@+id/etItemName"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:hint="@string/nameHint"
		        android:inputType="text" />
		    
		
		    <CheckBox
		        android:id="@+id/cbDone"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="27dp"
		        android:text="@string/done" />
		
		    <Button
		        android:id="@+id/bAddDeadline"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:text="@string/addDeadline" />
	
	        <DatePicker
	            android:id="@+id/datePicker"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="27dp"
	            android:calendarViewShown="false"
	            android:visibility="gone" />
	
	        <TimePicker
	            android:id="@+id/timePicker"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="44dp"
	            android:visibility="gone" />
 		    

 		    
	        <Button
		        android:id="@+id/bAddGpsLocation"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:text="@string/addGpsLocation" />

	        <Button
	            android:id="@+id/bChangeGpsLocation"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="20dp"
	            android:text="@string/changeGpsLocation" />
	       
	         <TextView
	            android:id="@+id/tvLatitude"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text=""
		        android:textSize="20sp"
		        android:textStyle="bold" />
	        

	        <TextView
	            android:id="@+id/tvLongitude"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text=""
		        android:textSize="20sp"
		        android:textStyle="bold" />
	        
		</LinearLayout>
	</ScrollView>
</LinearLayout>
